@@ -1,14 +1,19 @@
 package kr.mj.polling.config;
 
 import io.swagger.v3.oas.models.OpenAPI;
+import io.swagger.v3.oas.models.servers.Server;
 import kr.mj.polling.common.Const;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.web.bind.annotation.RestController;
 import springfox.documentation.builders.PathSelectors;
 import springfox.documentation.builders.RequestHandlerSelectors;
 import springfox.documentation.oas.web.OpenApiTransformationContext;
 import springfox.documentation.oas.web.WebMvcOpenApiTransformationFilter;
-import springfox.documentation.service.*;
+import springfox.documentation.service.ApiInfo;
+import springfox.documentation.service.ApiKey;
+import springfox.documentation.service.AuthorizationScope;
+import springfox.documentation.service.SecurityReference;
 import springfox.documentation.spi.DocumentationType;
 import springfox.documentation.spi.service.contexts.SecurityContext;
 import springfox.documentation.spring.web.plugins.Docket;
@@ -27,18 +32,13 @@ public class SwaggerConfig implements WebMvcOpenApiTransformationFilter {
 		version = "v1";
 		title = "Free-Polling API";
 
-		Server localServer = new Server("local", "http://localhost:8080", "for local", Collections.emptyList(), Collections.emptyList());
-		Server devServer = new Server("dev", "http://dev.free.polling.com", "for dev", Collections.emptyList(), Collections.emptyList());
-		Server prodServer = new Server("prod", "https://free.polling.com", "for prod", Collections.emptyList(), Collections.emptyList());
-
 		return new Docket(DocumentationType.OAS_30)
-				.servers(localServer, devServer, prodServer)
 				.consumes(getConsumeContentTypes())
 				.produces(getProduceContentTypes())
 				.useDefaultResponseMessages(false)
 				.groupName(version)
 				.select()
-				.apis(RequestHandlerSelectors.basePackage("kr.mj.polling.*.controller"))
+				.apis(RequestHandlerSelectors.withClassAnnotation(RestController.class))
 				.paths(PathSelectors.ant(Const.ROOT_URL + "/**"))
 				.build()
 				.apiInfo(apiInfo(title, version))
@@ -51,19 +51,19 @@ public class SwaggerConfig implements WebMvcOpenApiTransformationFilter {
 
 		OpenAPI openApi = context.getSpecification();
 
-		io.swagger.v3.oas.models.servers.Server localServer = new io.swagger.v3.oas.models.servers.Server();
+		Server localServer = new Server();
 		localServer.setDescription("local");
 		localServer.setUrl("http://localhost:8080");
 
-		io.swagger.v3.oas.models.servers.Server devServer = new io.swagger.v3.oas.models.servers.Server();
+		Server devServer = new Server();
 		devServer.setDescription("dev");
-		devServer.setUrl("http://api-partner-1a.howser.dev:8080");
+		devServer.setUrl("https://dev.free.polling.com");
 
-		io.swagger.v3.oas.models.servers.Server prodServer = new io.swagger.v3.oas.models.servers.Server();
+		Server prodServer = new Server();
 		prodServer.setDescription("prod");
-		prodServer.setUrl("http://api-partner-1a.howser.prod:8080");
+		prodServer.setUrl("https://free.polling.com");
 
-		openApi.setServers(Arrays.asList(localServer, devServer, prodServer));
+		openApi.setServers(List.of(localServer, devServer, prodServer));
 
 		return openApi;
 	}
@@ -76,7 +76,7 @@ public class SwaggerConfig implements WebMvcOpenApiTransformationFilter {
 	private ApiInfo apiInfo(String title, String version) {
         return new ApiInfo(
 				title,
-				"Swagger로 생성한 API Docs",
+				"Free-Polling API Docs",
 				version,
 				null,
 				null,
